<resources>
    <string name="app_name">Movie</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="age">13+</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="back">Back</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="_13">13+</string>
    <string name="action_adventure">Action, Adventure</string>
    <string name="avengers_end_game2">Avengers: End Game</string>
    <string name="_137_min">137 MIN</string>
</resources>