<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity"
    android:background="@color/darkgray_color">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:layout_height="298dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/mask" />

    <TextView
        android:id="@+id/avengersEndGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="start"
        android:letterSpacing="-0.005"
        android:lineSpacingExtra="-4dp"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/avengers_end_game"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/main_image"
        app:layout_constraintStart_toStartOf="@id/main_image"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/genre"
        android:textColor="@color/red_color"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/avengersEndGame"
        app:layout_constraintStart_toStartOf="@id/avengersEndGame"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/back"
        android:textColor="@color/white_50"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/path" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/star2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:srcCompat="@drawable/star_icon"/>

    <ImageView
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"

        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toEndOf="@id/star1"
        app:layout_constraintEnd_toStartOf="@id/star3"
        app:srcCompat="@drawable/star_icon"/>

    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"

        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toEndOf="@id/star2"
        app:layout_constraintEnd_toStartOf="@id/star4"
        app:srcCompat="@drawable/star_icon"/>

    <ImageView
        android:id="@+id/star4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"

        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toEndOf="@id/star3"
        app:layout_constraintEnd_toStartOf="@id/star5"
        app:srcCompat="@drawable/star_icon"/>

    <ImageView
        android:id="@+id/star5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"

        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toEndOf="@id/star4"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/star_icon_gr"/>

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/_125_reviews"
        android:textColor="@color/gray_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/star5"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:fontFamily="@font/roboto_bold"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="6"
        android:shadowRadius="50"
        android:text="@string/storyline"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="6"
        android:shadowRadius="50"
        android:text="@string/cast"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_robert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toStartOf="@id/image_chris"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"

        app:srcCompat="@drawable/robert" />

    <ImageView
        android:id="@+id/image_chris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/image_mark"
        app:layout_constraintStart_toEndOf="@id/image_robert"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/chris" />

    <ImageView
        android:id="@+id/image_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/image_chris2"
        app:layout_constraintStart_toEndOf="@id/image_chris"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/mark" />

    <ImageView
        android:id="@+id/image_chris2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_mark"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/chris2" />

    <TextView
        android:id="@+id/text_robert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/robert_downey_jr"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_robert"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_robert"
        app:layout_constraintTop_toBottomOf="@+id/image_robert"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_chris"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chris_evans"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_chris"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_chris"
        app:layout_constraintTop_toBottomOf="@+id/image_chris"
        app:layout_constraintVertical_bias="0.00" />

    <TextView
        android:id="@+id/text_mark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mark_ruffalo"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_mark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_mark"
        app:layout_constraintTop_toBottomOf="@+id/image_mark"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_chris2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chris_hemsworth"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_chris2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_chris2"
        app:layout_constraintTop_toBottomOf="@+id/image_chris2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
