<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkgray_color"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:layout_height="298dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mask" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="start"
        android:letterSpacing="-0.005"
        android:lineSpacingExtra="-4dp"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/avengers_end_game"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_age" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/main_image"
        app:layout_constraintStart_toStartOf="@id/main_image"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/genre"
        android:textColor="@color/red_color"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/back"
        android:textColor="@color/white_50"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_back"
        app:layout_constraintEnd_toStartOf="@+id/tv_back"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_back"
        app:srcCompat="@drawable/path" />




    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"

        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        app:layout_constraintStart_toStartOf="parent"

        app:constraint_referenced_ids="star1,star2,star3,star4,star5"

        app:flow_wrapMode="none"
        app:flow_horizontalGap="16dp"
        app:flow_verticalGap="0dp" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/star_icon"/>

    <ImageView
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/star_icon"/>
    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/star_icon"/>
    <ImageView
        android:id="@+id/star4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/star_icon"/>


    <ImageView
        android:id="@+id/star5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/star_icon_gr"/>


    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/_125_reviews"
        android:textColor="@color/gray_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/star5"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <TextView
        android:id="@+id/tv_storyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="6"
        android:shadowRadius="50"
        android:text="@string/storyline"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star1"
        app:layout_constraintVertical_bias="0.0" />



    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_storyline"
        app:layout_constraintTop_toBottomOf="@+id/tv_storyline"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="6"
        android:shadowRadius="50"
        android:text="@string/cast"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_bias="0.0" />

    <include
        android:id="@+id/castItemRobert"
        layout="@layout/item_cast_robert"/>
    <include
        android:id="@+id/castItemChris"
        layout="@layout/item_cast_chris"/>
    <include
        android:id="@+id/castItemMark"
        layout="@layout/item_cast_mark"/>
    <include
        android:id="@+id/castItemChris2"
        layout="@layout/item_cast_chris2"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cast"
        app:layout_constraintStart_toStartOf="parent"

        app:constraint_referenced_ids="castItemRobert,castItemChris,castItemMark,castItemChris2"
        app:flow_wrapMode="none"
        app:flow_horizontalStyle="packed"
        app:flow_horizontalGap="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

