<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardMovie"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:background="@drawable/card_bg"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/movie" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:background="@drawable/age_bg"
            android:text="@string/_13"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            app:layout_constraintTop_toTopOf="@id/ivPoster"
            app:layout_constraintStart_toStartOf="@id/ivPoster"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/tvGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/action_adventure"
            android:textColor="@color/red_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPoster" />

        <LinearLayout
            android:id="@+id/layoutStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvGenres"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/star_icon"/>
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/star_icon"
                android:layout_marginStart="2dp"/>
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/star_icon"
                android:layout_marginStart="2dp"/>
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/star_icon"
                android:layout_marginStart="2dp"/>
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/star_icon_gr"
                android:layout_marginStart="2dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="228dp"
            android:text="@string/_125_reviews"
            android:textColor="@color/gray_color"
            android:fontFamily="@font/roboto"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/layoutStars"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/avengers_end_game2"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto_bold"

            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/layoutStars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"

            android:text="@string/_137_min"
            android:textColor="@color/gray_color"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>